# py4dgeo

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING.md  Dockerfile  FILESTRUCTURE.md  LICENSE.md  MANIFEST.in  README.md  TODO.md  codecov.yml  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  sonar-project.properties  visualization.yml
.github/workflows/: cache-test-data.yml  ci.yml  pypi.yml  sonarcloud.yml  test-cache.yml
app/: CMakeLists.txt  geolib4d_app.cpp  py4dgeo_app.cpp
benchmarks/: CMakeLists.txt  bench.cpp  bench.hpp  changepoint_detection_b.cpp  cylindersearch_b.cpp  distances_b.cpp  multiscale_normal.cpp  multiscale_normal_debug.cpp  scalability.ipynb  scaling.cpp
contributor_template/: application_demo.ipynb  basic_usage.ipynb  basic_usage.py
demo/: 4dobc-change_analysis.ipynb  kmeans_clustering_of_time_series.ipynb  m3c2-change_analysis.ipynb  m3c2ep_change_analysis.ipynb  principal_component_analysis_of_time_series.ipynb  registration_standard_ICP.ipynb
demo/change_visualization/: change_events.json  change_visualization_config.json  plot_config.json  visualization_filters.json
doc/: 4dobc-analysis.nblink  4dobc-creation.nblink  4dobc-customization.nblink  4dobc.nblink  CMakeLists.txt  PB_M3C2-scenario3.nblink  PB_M3C2.nblink  PB_M3C2_scenario2.nblink  PB_M3C2_scenario4.nblink  basic.rst  c2c.nblink  callbacks.rst  conf.py  cppapi.rst  customization.nblink  faq.rst  hierarchical_change_analysis.nblink  index.rst  m3c2.nblink  m3c2ep.nblink  pbm3c2-longterm.nblink  pbm3c2-segmented.nblink  pbm3c2-tools.nblink  pbm3c2.nblink  pythonapi.rst  registration.nblink  requirements-rtd.txt  spatial_subsampling.nblink
ext/: CMakeLists.txt
include/geolib4d/: geolib4d.hpp
include/py4dgeo/: compute.hpp  epoch.hpp  kdtree.hpp  nanoflann.hpp  octree.hpp  openmp.hpp  py4dgeo.hpp  pybind11_helpers.hpp  pybind11_numpy_interop.hpp  registration.hpp  searchtree.hpp  segmentation.hpp  tbb_pinning_observer.hpp
jupyter/: 4dobc-analysis.ipynb  4dobc-change_analysis.ipynb  4dobc-creation.ipynb  4dobc-customization.ipynb  4dobc-extraction.ipynb  4dobc-merge.ipynb  4dobc.ipynb  PB_M3C2-customization.ipynb  PB_M3C2-scenario3.ipynb  PB_M3C2-scenario3_final_version.ipynb  PB_M3C2.ipynb  PB_M3C2_scenario2.ipynb  PB_M3C2_scenario4.ipynb  PB_M3C2_scenario4_final_version.ipynb  c2c.ipynb  change_visualization.ipynb  customization.ipynb  extraction.ipynb  hierarchical_change_analysis.ipynb  kmeans_clustering_of_time_series.ipynb  levelset-analysis.ipynb  m3c2-change_analysis.ipynb  m3c2-ep.ipynb  m3c2.ipynb  m3c2ep.ipynb  m3c2ep_change_analysis.ipynb  outlier_removal.ipynb  outlier_removal_SOR_ScOR.ipynb  pbm3c2-longterm.ipynb  pbm3c2-segmented.ipynb  pbm3c2-tools.ipynb  pbm3c2.ipynb  principal_component_analysis_of_time_series.ipynb  registration.ipynb  registration_standard_ICP.ipynb  searchtree.ipynb  spatial_subsampling.ipynb  visualization.ipynb
lib/: CMakeLists.txt  directions.cpp  distances.cpp  epoch.cpp  kdtree.cpp  mimalloc_init.cpp  octree.cpp  registration.cpp  searchtree.cpp  segmentation.cpp
minimal_benchmark/: CMakeLists.txt  compute_normals.cpp  compute_normals_kdtree.cpp  compute_normals_octree.cpp
py4dgeo/: CMakeLists.txt  __init__.py  cloud.py  directions.py  epoch.py  fallback.py  kdtree.py  m3c2.py  py4dgeo_python.cpp  util.py
python/: CMakeLists.txt  geolib4d_python.cpp  py4dgeo_python.cpp
python/tests/: test_python_bindings.py
src/: CMakeLists.txt  bulkcompute.cpp  directions.cpp  distances.cpp  epoch.cpp  geolib4d.cpp  kdtree.cpp  py4dgeo.cpp
src/py4dgeo/: PB_M3C2.py  __init__.py  base.py  c2c.py  change_events.py  change_visualization.py  cloudcompare.py  directions.py  epoch.py  epoch0.las  epoch0.xyz  epoch1.las  epoch1.xyz  epoch_extended_y.csv  fallback.py  joined_segments.csv  levelset.py  levelset_algorithm_functions.py  logger.py  m3c2.py  m3c2ep.py  pbm3c2.py  pbm3c2_rt_test.ipynb  pbm3c2_test.py  pbm3c2_test_known_segments.ipynb  pointcloud_functions.py  py4dgeo_python.cpp  registration.py  scor.py  segmentation.py  sor.py  testing_PerPointComputation_Transformer.py  testing_scenario1.py  testing_scenario1_interactively.py  testing_scenario2.py  testing_scenario3.py  testing_scenario4.py  testing_scenario4_bis.py  util.py  vapc.py  (+3 more)
tests/: CMakeLists.txt  geolib4d_t.cpp  py4dgeo_t.cpp
tests/c++/: CMakeLists.txt  bulkcompute_t.cpp  directions_t.cpp  distances_t.cpp  epoch_t.cpp  kdtree_t.cpp  octree_t.cpp  py4dgeo_t.cpp  registration_t.cpp  searchtrees_t.cpp  segmentation_t.cpp  tests.cpp  testsetup.cpp  testsetup.hpp
tests/data/: ahk_2017_small.las  ahk_2017_small.xyz  plane_horizontal_t1.xyz  plane_horizontal_t2.xyz
tests/python/: __init__.py  conftest.py  helpers.py  test_PB_M3C2_compute_distances.py  test_PB_M3C2_consistency.py  test_PB_M3C3_predict.py  test_c2c.py  test_cloudcompare.py  test_directions.py  test_epoch.py  test_fallback.py  test_kdtree.py  test_levelset.py  test_logger.py  test_m3c2.py  test_m3c2ep.py  test_octree.py  test_pbm3c2.py  test_pbm3c2_compute_distances.py  test_pbm3c2_consistency.py  test_pbm3c2_predict.py  test_py4dgeo.py  test_registration.py  test_segmentation.py  test_sor.py  test_util.py  test_vapc.py
