# Create the minimal benchmark target
add_executable(minimal_benchmark_kdtree compute_normals_kdtree.cpp)
add_executable(minimal_benchmark_octree compute_normals_octree.cpp)

target_link_libraries(minimal_benchmark_kdtree PUBLIC py4dgeo py4dgeo_test)
target_link_libraries(minimal_benchmark_octree PUBLIC py4dgeo py4dgeo_test)
